完善了订单系统和一些CURD，还将打断状态的文本缺失bug修复了（修复的比较粗糙），还写了一个指数退避算法（原本打算使用在轮询上面的，但是没有做），还写了一个RAG检索（和Pg差不多，只不过使用Mysql实现的）和两个相关小算法